--- a/App/Rango.Business/Rango.Business.csproj
+++ b/App/Rango.Business/Rango.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{24C98AE0-1062-483B-8ACE-24C9644A6DE1}</ProjectGuid>
+    <ProjectGuid>{D4FD096D-5C93-43AB-BF14-15A453F2BE1C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Rango.Common</RootNamespace>
-    <AssemblyName>Rango.Common</AssemblyName>
+    <RootNamespace>Rango.Business</RootNamespace>
+    <AssemblyName>Rango.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UserService.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Rango.Domain\Rango.Domain.csproj">
+      <Project>{dc193c46-d337-4ddc-9d3c-70486ed551cf}</Project>
+      <Name>Rango.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
