Adição de novas entidades de domínio + atualização do diagrama de classes

--- a/App/Rango.Domain/Rango.Domain.csproj
+++ b/App/Rango.Domain/Rango.Domain.csproj
@@ -33,8 +33,17 @@
     <Compile Include="Contracts\Repositories\IUserRepository.cs" />
     <Compile Include="Contracts\Services\IUserService.cs" />
     <Compile Include="Entities\Address.cs" />
-    <Compile Include="Entities\Order\Ordered.cs" />
-    <Compile Include="Entities\Order\OrderedItem.cs" />
+    <Compile Include="Entities\Client.cs" />
+    <Compile Include="Entities\Email.cs" />
+    <Compile Include="Entities\Order\Order.cs" />
+    <Compile Include="Entities\Order\OrderItem.cs" />
+    <Compile Include="Entities\Order\Payment.cs" />
+    <Compile Include="Entities\Products\Category.cs" />
+    <Compile Include="Entities\Products\Product.cs" />
+    <Compile Include="Entities\Shop\Rating.cs" />
+    <Compile Include="Entities\Shop\Culinary.cs" />
+    <Compile Include="Entities\Shop\WorkHours.cs" />
+    <Compile Include="Entities\Shop\PageLink.cs" />
     <Compile Include="Entities\Shop\PaymentMethod.cs" />
     <Compile Include="Entities\Score.cs" />
     <Compile Include="Entities\Shop\Store.cs" />
