--- a/App/Rango.Domain/Rango.Domain.csproj
+++ b/App/Rango.Domain/Rango.Domain.csproj
@@ -52,16 +52,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Diagram\ClassDiagram.cd" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rango.Common\Rango.Common.csproj">
       <Project>{24c98ae0-1062-483b-8ace-24c9644a6de1}</Project>
       <Name>Rango.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\Repositories\Order\" />
+    <Folder Include="Contracts\Repositories\Products\" />
+    <Folder Include="Contracts\Repositories\Shop\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
