Novas entidades modeladas (Telephone, Client e Email) + Criação de novas mensagens de erros (Globalização)

--- a/Rango.Api/Rango.Api.csproj
+++ b/Rango.Api/Rango.Api.csproj
@@ -88,7 +88,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Rango.Common\Rango.Common.csproj">
+    <ProjectReference Include="..\App\Rango.Common\Rango.Common.csproj">
       <Project>{24c98ae0-1062-483b-8ace-24c9644a6de1}</Project>
       <Name>Rango.Common</Name>
     </ProjectReference>
