Criação de repositório genérico e organização de estrutura (implementação) de contratos e implementações.

--- a/App/Rango.Database/Rango.Database.csproj
+++ b/App/Rango.Database/Rango.Database.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Compile Include="Context\ConnectionDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Base\GenericRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup />
