Pequenos ajustes e remoção de usings desnecesários

--- a/App/Rango.Domain/Rango.Domain.csproj
+++ b/App/Rango.Domain/Rango.Domain.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Entities\Shop\WorkHours.cs" />
     <Compile Include="Entities\Shop\PageLink.cs" />
     <Compile Include="Entities\Shop\PaymentMethod.cs" />
-    <Compile Include="Entities\Score.cs" />
+    <Compile Include="Entities\Credit.cs" />
     <Compile Include="Entities\Shop\Store.cs" />
     <Compile Include="Entities\Telephone.cs" />
     <Compile Include="Entities\User.cs" />
